--- a/index.html
+++ b/index.html
@@ -1,30 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link href="styles/style.css" rel="stylesheet" />
 <body> 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Prak1</title>    
-
-        <div style="text-align: center;">
-            <h1 style="background-color: aquamarine;">ABOUT ME</h1>
-            <img src="Image.html" alt="Prak1" style="width:300px; border-radius: 50%;"/>  
-        </div>
-        <div style="text-align: center; background-color:  pink;">
-             <h1> Hai!!</h1> 
-    <ul>
-    <p><strong>Nama Lengkap</strong> : Rohmah Mufidah</P>
-    <p><strong>NIM</strong>          : 2300016079</p>
-    <p><strong>Lahir</strong>        : Musi Banyuasin, 15 Januari</p>
-    <p><strong>Alamat</strong>       : Sri Gunung, Sungai lilin, Musi Banyuasin, Sumtera Selatan</p>
-    <p><strong>Hobi</strong>         : Menulis, Mencoba hal baru</P>
-    <p><strong>Sosial Media</strong> : <a>Ig</a><a href="https://www.instagram.com/mufiiidhr_/profilecard/?igsh=MXI5NmQzbWtqbnBrbA==">
-        instagram</a>
-class
-    </div>
+    
+    <link href="styles/style.css" rel="stylesheet" /> 
+    <title>Prak1</title>   
 </head>
+        <div style="text-align: center;" >
+            <h1>BIODATA DIRI</h1> 
+            <img src="sarah coc.html" alt="Prak1" style="width:300px;"/>        
+        </div>
+        <div style="background-color:  pink;">
+    <ul>
+    <div style="text-align: center;">   
+    <p><strong>SARAH FIRJANI HANISAH</strong></p>
+    </ul>
+    <p>Sarah, seorang mahasisiwi di Institut Pertanian Bogor (IPB) dengan hobi menulis, Program Studi Ilmu Gizi, dengan IPK 3.82/4.00, 
+        merupakan alumni dari cast of Ruangguru Clash 0f Champions (CoC) 2024.</p> 
+    </div>
+
+    <div style="text-align: center;" >
+    <h2>MEDIA SOSIAL</h2>
+    <div style="background-color:  rgb(255, 192, 203);">
+    <ul>
+        <p><a>IG : </a><a href="https://www.instagram.com/sarahfirjanii?utm_source=">instagram</a>
+        <P><a>Linkedl : </a><a href="https://www.linkedin.com/in/sarahfirjani?lipi=">Linkedl</a></P>
+    </ul>
+    </div>
+    
+    <div style="text-align: center;" ></div>
+        <h2>PRESTASI</h2>
+        <div style="background-color:  rgb(255, 192, 203);">
+    <ul>
+    <li>meraih penghargaan Mahasiswa Berprestasi Ilmu Gizi 2024</li>
+    <li>Content Writer at Taulebih</li>
+        </ul>
+    <ul> 
+        <div class="container">
+            <button id="themeToggle">Toggle Dark/Light Theme</button>
+            <select id="fontSelector">
+                <option value="Arial">Arial</option>
+                <option value="Courier New">Courier New</option>
+                <option value="Georgia">Georgia</option>
+                <option value="Times New Roman">Times New Roman</option>
+            </select>
+        </div>
+        <script src="script.js"></script>
+    </ul>
 </body>
 </html>
-
-
